Screen's 1, 2, and 3: design changes. Screen 1: date picker theme changed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">ProCalendar</string>
     
     <string-array name="student_eduLevel">
-        <item>Select Eduction Level from Drop Down Below</item>
+        <item>Select Eduction Level from Drop Down</item>
         <item>University</item>
         <item>College</item>
         <item>School</item>
